# heimdall-v2

./: Cargo.toml  README.md
config/: consumer.json  default.json  heimdall.json
consumer/: Cargo.toml
consumer/src/: config.rs  consumer.rs  database.rs  event.rs  lib.rs  main.rs  processor.rs
core/: Cargo.toml  build.rs
core/proto/: events.proto  heimdall.proto
core/src/: config.rs  event.rs  filter.rs  heimdall.rs  lib.rs  plugin-config.json  plugin.rs  producer.rs  publisher.rs
core/src/models/: mod.rs
