[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "heimdall-consumer"
path = "src/main.rs"

[dependencies]
bytes = "1.5"
clickhouse = "0.11"
log = "0.4"
prost = "0.12"
rdkafka = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
bs58 = "0.4"

[build-dependencies]
prost-build = "0.12"