[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
agave-geyser-plugin-interface = "2.2.7"
prost = "0.14.1"
rdkafka = { version = "0.37.0", features = ["ssl", "sasl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "*"
solana-message = "*"
solana-transaction-status = "*"
solana-pubkey = "*"
env_logger = "0.11.8"
log = "0.4.27"

[build-dependencies]
prost-build = "0.14.1"
