[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
agave-geyser-plugin-interface = "2.0"
bytes = "1.5"
log = "0.4"
prost = "0.12"
rdkafka = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-logger = "2.0"
solana-message = "2.0"
solana-pubkey = "2.0"
solana-transaction-status = "2.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12"

[lib]
crate-type = ["cdylib", "lib"]